--- a/data_to_paper/data_to_paper_examples/examples/projects/diabetes/outputs/paper1302/citations.bib
+++ b/data_to_paper/data_to_paper_examples/examples/projects/diabetes/outputs/paper1302/citations.bib
@@ -1,45 +1,3 @@
-@Article{Kato2015DiagnosedDA,
- author = {Masayuki Kato and Mitsuhiko Noda and T. Mizoue and A. Goto and Yoshihiko Takahashi and Y. Matsushita and A. Nanri and H. Iso and M. Inoue and N. Sawada and S. Tsugane},
- booktitle = {BMJ Open},
- journal = {BMJ Open},
- title = {Diagnosed diabetes and premature death among middle-aged Japanese: results from a large-scale population-based cohort study in Japan (JPHC study)},
- volume = {5},
- year = {2015}
-}
-
-
-@Article{Luo2007BodyMI,
- author = {Juhua Luo and M. Iwasaki and M. Inoue and S. Sasazuki and T. Otani and W. Ye and S. Tsugane and for the Japan Public Health Center-based Prospective S Group},
- booktitle = {Cancer Causes and Control},
- journal = {Cancer Causes \& Control},
- pages = {603-612},
- title = {Body mass index, physical activity and the risk of pancreatic cancer in relation to smoking status and history of diabetes: a large-scale population-based cohort study in JapanThe JPHC study},
- volume = {18},
- year = {2007}
-}
-
-
-@Article{Mozaffarian2016DietaryAP,
- author = {D. Mozaffarian},
- booktitle = {Circulation},
- journal = {Circulation},
- pages = {187225},
- title = {Dietary and Policy Priorities for Cardiovascular Disease, Diabetes, and Obesity: A Comprehensive Review},
- volume = {133},
- year = {2016}
-}
-
-
-@Article{Robinson1991SomeSR,
- author = {L. D. Robinson and N. Jewell},
- journal = {International Statistical Review},
- pages = {227-240},
- title = {Some surprising results about covariate adjustment in logistic regression models},
- volume = {59},
- year = {1991}
-}
-
-
 @Article{Bohn2015ImpactOP,
  author = {B. Bohn and A. Herbst and M. Pfeifer and D. Krakow and S. Zimny and F. Kopp and A. Melmer and J. Steinacker and R. Holl},
  booktitle = {Diabetes Care},
@@ -51,32 +9,110 @@
 }
 
 
-@Inproceedings{Faraway2014LinearMW,
- author = {J. Faraway},
- title = {Linear Models with R},
- year = {2014}
+@Article{Seiglie2020DiabetesPA,
+ author = {J. Seiglie and M. Marcus and Cara Ebert and Nikolaos Prodromidis and P. Geldsetzer and M. Theilmann and K. Agoudavi and Glennis Andall-Brereton and K. Aryal and B. Bicaba and P. Bovet and G. Brian and M. Dorobanu and G. Gathecha and M. Gurung and D. Guwatudde and Mohamed Msaidi and C. Houehanou and D. Houinato and J. Jrgensen and G. Kagaruki and K. Karki and D. Labadarios and J. Martins and Mary T Mayige and R. Wong-McClure and J. K. Mwangi and Omar Mwalim and Bolormaa Norov and Sarah Quesnel-Crooks and Bahendeka K Silver and L. Sturua and Lindiwe Tsabedze and C. Wesseh and A. Stokes and R. Atun and J. Davies and S. Vollmer and T. Brnighausen and L. Jaacks and J. Meigs and D. Wexler and J. Manne-Goehler},
+ booktitle = {Diabetes Care},
+ journal = {Diabetes Care},
+ pages = {767 - 775},
+ title = {Diabetes Prevalence and Its Relationship With Education, Wealth, and BMI in 29 Low- and Middle-Income Countries},
+ volume = {43},
+ year = {2020}
 }
 
 
-@Article{Pitasi2017HIVTA,
- author = {Marc A. Pitasi and Emeka Oraka and H. Clark and Machell Town and E. Dinenno},
+@Article{Logue2013AssociationBB,
+ author = {J. Logue and Jeremy J. Walker and G. Leese and R. Lindsay and J. McKnight and A. Morris and S. Philip and S. Wild and N. Sattar},
+ booktitle = {Diabetes Care},
+ journal = {Diabetes Care},
+ pages = {887 - 893},
+ title = {Association Between BMI Measured Within a Year After Diagnosis of Type 2 Diabetes and Mortality},
+ volume = {36},
+ year = {2013}
+}
+
+
+@Article{Pham2019EthnicDI,
+ author = {T. Pham and J. Carpenter and T. Morris and Manuj Sharma and I. Petersen},
+ booktitle = {Clinical Epidemiology},
+ journal = {Clinical Epidemiology},
+ pages = {1081 - 1088},
+ title = {Ethnic Differences in the Prevalence of Type 2 Diabetes Diagnoses in the UK: Cross-Sectional Analysis of the Health Improvement Network Primary Care Database},
+ volume = {11},
+ year = {2019}
+}
+
+
+@Article{Heslin2021SexualOD,
+ author = {K. Heslin and Jeffrey E. Hall},
  booktitle = {MMWR. Morbidity and mortality weekly report},
  journal = {Morbidity and Mortality Weekly Report},
- pages = {883 - 887},
- title = {HIV Testing Among Transgender Women and Men  27 States and Guam, 20142015},
- volume = {66},
+ pages = {149 - 154},
+ title = {Sexual Orientation Disparities in Risk Factors for Adverse COVID-19Related Outcomes, by Race/Ethnicity  Behavioral Risk Factor Surveillance System, United States, 20172019},
+ volume = {70},
+ year = {2021}
+}
+
+
+@Article{Aiello2019LargescaleAH,
+ author = {L. Aiello and R. Schifanella and D. Quercia and Lucia Del Prete},
+ booktitle = {EPJ Data Science},
+ journal = {EPJ Data Science},
+ title = {Large-scale and high-resolution analysis of food purchases and health outcomes},
+ volume = {8},
+ year = {2019}
+}
+
+
+@Article{Aune2015PhysicalAA,
+ author = {D. Aune and T. Norat and M. Leitzmann and S. Tonstad and L. Vatten},
+ booktitle = {European Journal of Epidemiology},
+ journal = {European Journal of Epidemiology},
+ pages = {529-542},
+ title = {Physical activity and the risk of type 2 diabetes: a systematic review and doseresponse meta-analysis},
+ volume = {30},
+ year = {2015}
+}
+
+
+@Article{Davis2010StateBasedEO,
+ author = {W. Davis and V. Parsons and D. Xie and N. Schenker and M. Town and T. Raghunathan and E. Feuer},
+ booktitle = {Public health reports (1974)},
+ journal = {Public Health Reports},
+ pages = {567 - 578},
+ title = {State-Based Estimates of Mammography Screening Rates Based on Information from Two Health Surveys},
+ volume = {125},
+ year = {2010}
+}
+
+
+@Article{Li2015ParsimoniousTR,
+ author = {Lexin Li and Xin Zhang},
+ journal = {Journal of the American Statistical Association},
+ pages = {1131 - 1146},
+ title = {Parsimonious Tensor Response Regression},
+ volume = {112},
+ year = {2015}
+}
+
+
+@Article{Hjerkind2017AdiposityPA,
+ author = {K. V. Hjerkind and J. S. Stenehjem and T. Nilsen},
+ booktitle = {BMJ Open},
+ journal = {BMJ Open},
+ title = {Adiposity, physical activity and risk of diabetes mellitus: prospective data from the population-based HUNT study, Norway},
+ volume = {7},
  year = {2017}
 }
 
 
-@Article{Khan2019EpidemiologyOT,
- author = {Moien A. B. Khan and M. J. Hashim and J. King and R. Govender and H. Mustafa and J. Al Kaabi},
- booktitle = {Journal of Epidemiology and Global Health},
- journal = {Journal of Epidemiology and Global Health},
- pages = {107 - 111},
- title = {Epidemiology of Type 2 Diabetes  Global Burden of Disease and Forecasted Trends},
- volume = {10},
- year = {2019}
+@Article{Kanaley2022ExercisePhysicalAI,
+ author = {J. Kanaley and S. Colberg and Matthew H. Corcoran and S. Malin and N. Rodriguez and C. Crespo and J. Kirwan and J. Zierath},
+ booktitle = {Medicine \& Science in Sports \& Exercise},
+ journal = {Medicine \& Science in Sports \& Exercise},
+ pages = {353 - 368},
+ title = {Exercise/Physical Activity in Individuals with Type 2 Diabetes: A Consensus Statement from the American College of Sports Medicine},
+ volume = {54},
+ year = {2022}
 }
 
 
@@ -90,34 +126,44 @@
 }
 
 
-@Article{Hill-Briggs2020SocialDO,
- author = {F. Hill-Briggs and N. Adler and Seth A. Berkowitz and M. Chin and T. Gary-Webb and A. Navas-Acien and Pamela L. Thornton and D. Haire-Joshu},
- booktitle = {Diabetes Care},
- journal = {Diabetes Care},
- pages = {258 - 279},
- title = {Social Determinants of Health and Diabetes: A Scientific Review},
- volume = {44},
- year = {2020}
+@Article{Gustavsson2014FTOGP,
+ author = {Jaana Gustavsson and K. Mehlig and K. Leander and L. Lissner and L. Bjrck and A. Rosengren and F. Nyberg},
+ booktitle = {Circulation: Cardiovascular Genetics},
+ journal = {Circulation: Cardiovascular Genetics},
+ pages = {171177},
+ title = {FTO Genotype, Physical Activity, and Coronary Heart Disease Risk in Swedish Men and Women},
+ volume = {7},
+ year = {2014}
 }
 
 
-@Article{Jafar2006PrevalenceOO,
- author = {T. Jafar and N. Chaturvedi and G. Pappas},
- booktitle = {Canadian Medical Association Journal},
- journal = {Canadian Medical Association Journal},
- pages = {1071 - 1077},
- title = {Prevalence of overweight and obesity and their association with hypertension and diabetes mellitus in an Indo-Asian population},
- volume = {175},
- year = {2006}
+@Article{Boffetta2011BodyMI,
+ author = {P. Boffetta and D. McLerran and Yu Chen and M. Inoue and R. Sinha and Jiang He and P. Gupta and S. Tsugane and F. Irie and A. Tamakoshi and Yu-Tang Gao and X. Shu and Renwei Wang and I. Tsuji and S. Kuriyama and K. Matsuo and H. Satoh and Chien-Jen Chen and Jian-Min Yuan and K. Yoo and H. Ahsan and W. Pan and D. Gu and M. Pednekar and S. Sasazuki and T. Sairenchi and Gong Yang and Y. Xiang and M. Nagai and Hideo Tanaka and Y. Nishino and S. You and W. Koh and Sue-Kyung Park and Chen-Yang Shen and M. Thornquist and D. Kang and Betsy Rolland and Ziding Feng and W. Zheng and J. Potter},
+ booktitle = {PLoS ONE},
+ journal = {PLoS ONE},
+ title = {Body Mass Index and Diabetes in Asia: A Cross-Sectional Pooled Analysis of 900,000 Individuals in the Asia Cohort Consortium},
+ volume = {6},
+ year = {2011}
 }
 
 
-@Article{Batsis2015ImpactOO,
- author = {J. Batsis and A. Zbehlik and L. Barre and J. Bynum and D. Pidgeon and S. Bartels},
- booktitle = {Scandinavian Journal of Rheumatology},
- journal = {Scandinavian Journal of Rheumatology},
- pages = {495 - 502},
- title = {Impact of obesity on disability, function, and physical activity: data from the Osteoarthritis Initiative},
- volume = {44},
- year = {2015}
+@Article{Lam2012TheWD,
+ author = {David W Lam and D. Leroith},
+ booktitle = {Current Opinion in Endocrinology, Diabetes \& Obesity},
+ journal = {Current Opinion in Endocrinology \& Diabetes and Obesity},
+ pages = {9396},
+ title = {The worldwide diabetes epidemic},
+ volume = {19},
+ year = {2012}
+}
+
+
+@Article{Khanam2019PrevalenceAR,
+ author = {F. Khanam and M. B. Hossain and S. Mistry and K. Afsana and Mahfuzar Rahman},
+ booktitle = {Journal of Epidemiology and Global Health},
+ journal = {Journal of Epidemiology and Global Health},
+ pages = {176 - 184},
+ title = {Prevalence and Risk Factors of Cardiovascular Diseases among Bangladeshi Adults: Findings from a Cross-sectional Study},
+ volume = {9},
+ year = {2019}
 }
