--- a/data_to_paper/data_to_paper_examples/examples/projects/diabetes/outputs/paper1308/citations.bib
+++ b/data_to_paper/data_to_paper_examples/examples/projects/diabetes/outputs/paper1308/citations.bib
@@ -1,35 +1,3 @@
-@Article{Walraven2009AMO,
- author = {C. van Walraven and P. Austin and Alison Jennings and H. Quan and A. Forster},
- booktitle = {Medical Care},
- journal = {Medical Care},
- pages = {626-633},
- title = {A Modification of the Elixhauser Comorbidity Measures Into a Point System for Hospital Death Using Administrative Data},
- volume = {47},
- year = {2009}
-}
-
-
-@Article{Devaraj2020CardiovascularHI,
- author = {Susan M. Devaraj and A. Kriska and T. Orchard and Rachel G. Miller and T. Costacou},
- booktitle = {Diabetologia},
- journal = {Diabetologia},
- pages = {571 - 580},
- title = {Cardiovascular health in early adulthood predicts the development of coronary heart disease in individuals with type 1 diabetes: 25 year follow-up from the Pittsburgh Epidemiology of Diabetes Complications study},
- volume = {64},
- year = {2020}
-}
-
-
-@Article{Franssen2020CanCW,
- author = {W. Franssen and G. H. Franssen and J. Spaas and F. Solmi and B. O. Eijnde},
- booktitle = {International Journal of Behavioral Nutrition and Physical Activity},
- journal = {The International Journal of Behavioral Nutrition and Physical Activity},
- title = {Can consumer wearable activity tracker-based interventions improve physical activity and cardiometabolic health in patients with chronic diseases? A systematic review and meta-analysis of randomised controlled trials},
- volume = {17},
- year = {2020}
-}
-
-
 @Article{Heslin2021SexualOD,
  author = {K. Heslin and Jeffrey E. Hall},
  booktitle = {MMWR. Morbidity and mortality weekly report},
@@ -41,95 +9,54 @@
 }
 
 
-@Article{Lu2012MultivariateLR,
- author = {Minggen Lu and Wei Yang},
- booktitle = {Journal of Data Science},
- journal = {Journal of Data Science},
- title = {Multivariate Logistic Regression Analysis of Complex Survey Data with Application to BRFSS Data},
- year = {2012}
-}
-
-
-@Article{Partridge2012InadequatePC,
- author = {Sarah Partridge and J. Balayla and C. Holcroft and H. Abenhaim},
- booktitle = {American Journal of Perinatology},
- journal = {American Journal of Perinatology},
- pages = {787 - 794},
- title = {Inadequate Prenatal Care Utilization and Risks of Infant Mortality and Poor Birth Outcome: A Retrospective Analysis of 28,729,765 U.S. Deliveries over 8 Years},
- volume = {29},
- year = {2012}
-}
-
-
-@Article{Dessie2021MortalityrelatedRF,
- author = {Zelalem G. Dessie and T. Zewotir},
- booktitle = {BMC Infectious Diseases},
- journal = {BMC Infectious Diseases},
- title = {Mortality-related risk factors of COVID-19: a systematic review and meta-analysis of 42 studies and 423,117 patients},
- volume = {21},
- year = {2021}
-}
-
-
-@Article{Cawley2018ThirdYO,
- author = {J. Cawley and Aparna Soni and K. Simon},
- booktitle = {Journal of general internal medicine},
- journal = {Journal of General Internal Medicine},
- pages = {1495-1497},
- title = {Third Year of Survey Data Shows Continuing Benefits of Medicaid Expansions for Low-Income Childless Adults in the U.S.},
- volume = {33},
- year = {2018}
-}
-
-
-@Article{Johnson2002DecreasedMA,
- author = {Jeffrey A. Johnson and S. Majumdar and S. Simpson and E. Toth},
+@Article{Colberg2016PhysicalAA,
+ author = {S. Colberg and R. Sigal and J. Yardley and M. Riddell and D. Dunstan and P. Dempsey and E. Horton and Kristin Castorino and D. Tate},
  booktitle = {Diabetes Care},
- journal = {Diabetes care},
- pages = {
-          2244-8
-        },
- title = {Decreased mortality associated with the use of metformin compared with sulfonylurea monotherapy in type 2 diabetes.},
- volume = {25 12},
- year = {2002}
+ journal = {Diabetes Care},
+ pages = {2065 - 2079},
+ title = {Physical Activity/Exercise and Diabetes: A Position Statement of the American Diabetes Association},
+ volume = {39},
+ year = {2016}
 }
 
 
-@Inproceedings{Rolle-Lake2020BehavioralRF,
- author = {Lenzetta Rolle-Lake and E. Robbins},
- title = {Behavioral Risk Factor Surveillance System (BRFSS)},
+@Article{Walraven2009AMO,
+ author = {C. van Walraven and P. Austin and Alison Jennings and H. Quan and A. Forster},
+ booktitle = {Medical Care},
+ journal = {Medical Care},
+ pages = {626-633},
+ title = {A Modification of the Elixhauser Comorbidity Measures Into a Point System for Hospital Death Using Administrative Data},
+ volume = {47},
+ year = {2009}
+}
+
+
+@Article{Akalu2020KnowledgeAA,
+ author = {Yonas Akalu and B. Ayelign and M. Molla},
+ booktitle = {Infection and Drug Resistance},
+ journal = {Infection and Drug Resistance},
+ pages = {1949 - 1960},
+ title = {Knowledge, Attitude and Practice Towards COVID-19 Among Chronic Disease Patients at Addis Zemen Hospital, Northwest Ethiopia},
+ volume = {13},
  year = {2020}
 }
 
 
-@Article{Maddaloni2015LatentAD,
- author = {E. Maddaloni and N. Lessan and A. Al Tikriti and R. Buzzetti and P. Pozzilli and M. Barakat},
- booktitle = {PLoS ONE},
- journal = {PLoS ONE},
- title = {Latent Autoimmune Diabetes in Adults in the United Arab Emirates: Clinical Features and Factors Related to Insulin-Requirement},
- volume = {10},
- year = {2015}
+@Article{Mora2007PhysicalAA,
+ author = {S. Mora and N. Cook and J. Buring and P. Ridker and I. Lee},
+ booktitle = {Circulation},
+ journal = {Circulation},
+ pages = {2110-2118},
+ title = {Physical Activity and Reduced Risk of Cardiovascular Events: Potential Mediating Mechanisms},
+ volume = {116},
+ year = {2007}
 }
 
 
-@Article{Stein2015AssociationBP,
- author = {R. Stein and C. Rockman and Yu Guo and M. Adelman and T. Riles and W. Hiatt and J. Berger},
- booktitle = {Arteriosclerosis, Thrombosis and Vascular Biology},
- journal = {Arteriosclerosis, Thrombosis, and Vascular Biology},
- pages = {206212},
- title = {Association Between Physical Activity and Peripheral Artery Disease and Carotid Artery Stenosis in a Self-Referred Population of 3 Million Adults},
- volume = {35},
+@Inproceedings{Solanki2015EXERCISEAT,
+ author = {Dr.Kanchan Solanki},
+ title = {EXERCISE AND TYPE 2 DIABETES},
  year = {2015}
-}
-
-
-@Article{Iachan2016NationalWO,
- author = {Ronaldo Iachan and Carol Pierannunzi and Kristie Healey and K. Greenlund and Machell Town},
- booktitle = {BMC Medical Research Methodology},
- journal = {BMC Medical Research Methodology},
- title = {National weighting of data from the Behavioral Risk Factor Surveillance System (BRFSS)},
- volume = {16},
- year = {2016}
 }
 
 
@@ -144,151 +71,57 @@
 }
 
 
-@Article{Hill2015PhysicalAA,
- author = {Kylie Hill and Kylie Hill and Kylie Hill and P. Gardiner and V. Cavalheri and V. Cavalheri and S. Jenkins and S. Jenkins and S. Jenkins and G. Healy and G. Healy},
- booktitle = {Internal medicine journal (Print)},
- journal = {Internal Medicine Journal},
- title = {Physical activity and sedentary behaviour: applying lessons to chronic obstructive pulmonary disease},
- volume = {45},
- year = {2015}
-}
-
-
-@Article{Fretts2014LifesS7,
- author = {A. Fretts and B. Howard and B. McKnight and G. Duncan and S. Beresford and M. Mete and Ying Zhang and D. Siscovick},
+@Article{Colberg2010ExerciseAT,
+ author = {S. Colberg and R. Sigal and B. Fernhall and J. Regensteiner and B. Blissmer and R. Rubin and L. Chasan-Taber and A. Albright and B. Braun},
  booktitle = {Diabetes Care},
  journal = {Diabetes Care},
- pages = {2240 - 2245},
- title = {Lifes Simple 7 and Incidence of Diabetes Among American Indians: The Strong Heart Family Study},
- volume = {37},
- year = {2014}
+ pages = {2692 - 2696},
+ title = {Exercise and Type 2 Diabetes},
+ volume = {33},
+ year = {2010}
 }
 
 
-@Article{Moreira2014PrevalenceOM,
- author = {Gisela Cipullo Moreira and J. P. Cipullo and L. A. Ciorlia and C. Cesarino and J. Vilela-Martin},
- booktitle = {PLoS ONE},
- journal = {PLoS ONE},
- title = {Prevalence of Metabolic Syndrome: Association with Risk Factors and Cardiovascular Complications in an Urban Population},
- volume = {9},
- year = {2014}
+@Article{Nyberg2020AssociationOH,
+ author = {S. Nyberg and A. SinghManoux and A. SinghManoux and J. Pentti and J. Pentti and I. Madsen and S. Sabia and S. Sabia and Lars-Inge Alfredsson and L. Alfredsson and J. Bjorner and M. Borritz and H. Burr and M. Goldberg and M. Goldberg and K. Heikkil and M. Jokela and A. Knutsson and T. Lallukka and T. Lallukka and J. Lindbohm and M. Nielsen and M. Nordin and M. Nordin and T. Oksanen and J. Pejtersen and O. Rahkonen and R. Rugulies and M. Shipley and P. Sipil and S. Stenholm and S. Suominen and S. Suominen and J. Vahtera and M. Virtanen and M. Virtanen and H. Westerlund and M. Zins and M. Zins and M. Hamer and G. Batty and G. Batty and M. Kivimki and M. Kivimki},
+ booktitle = {JAMA Internal Medicine},
+ journal = {JAMA Internal Medicine},
+ pages = {1 - 10},
+ title = {Association of Healthy Lifestyle With Years Lived Without Major Chronic Diseases},
+ volume = {180},
+ year = {2020}
 }
 
 
-@Article{Rubin2014ImpactOI,
- author = {R. Rubin and T. Wadden and J. Bahnson and G. Blackburn and F. Brancati and G. Bray and Mace Coday and S. Crow and J. M. Curtis and G. Dutton and Caitlin M. Egan and M. Evans and L. Ewing and L. Faulconbridge and J. Foreyt and S. Gaussoin and E. Gregg and H. Hazuda and James O Hill and E. Horton and V. Hubbard and J. Jakicic and R. Jeffery and K. Johnson and S. Kahn and W. Knowler and W. Lang and C. Lewis and M. Montez and Anne Murillo and D. Nathan and Jennifer Patricio and A. Peters and X. Pi-Sunyer and H. Pownall and W. Rejeski and Renate Rosenthal and Valerie Ruelas and Katie Toledo and B. van Dorsten and M. Vitolins and D. Williamson and R. Wing and S. Yanovski and Ping Zhang},
- booktitle = {Diabetes Care},
- journal = {Diabetes Care},
- pages = {1544 - 1553},
- title = {Impact of Intensive Lifestyle Intervention on Depression and Health-Related Quality of Life in Type 2 Diabetes: The Look AHEAD Trial},
- volume = {37},
- year = {2014}
-}
-
-
-@Article{Bowles2002TheAB,
- author = {H. Bowles and J. Morrow and Bruce Leonard and M. Hawkins and P. Couzelis},
- booktitle = {Research Quarterly for Exercise and Sport},
- journal = {Research Quarterly for Exercise and Sport},
- pages = {464 - 470},
- title = {The Association between Physical Activity Behavior and Commonly Reported Barriers in a Worksite Population},
- volume = {73},
- year = {2002}
-}
-
-
-@Article{Rosenfeld2017SexdependentDI,
- author = {C. Rosenfeld},
- booktitle = {Journal of Neuroscience Research},
- journal = {Journal of Neuroscience Research},
- title = {Sexdependent differences in voluntary physical activity},
- volume = {95},
- year = {2017}
-}
-
-
-@Article{Thom2013ImpactOP,
- author = {D. Thom and A. Ghorob and D. Hessler and Diana De Vore and Ellen H. Chen and Thomas Bodenheimer},
- booktitle = {Annals of Family Medicine},
- journal = {The Annals of Family Medicine},
- pages = {137 - 144},
- title = {Impact of Peer Health Coaching on Glycemic Control in Low-Income Patients With Diabetes: A Randomized Controlled Trial},
- volume = {11},
- year = {2013}
-}
-
-
-@Article{Gebreab2015GeographicVI,
- author = {Samson Y. Gebreab and S. Davis and J. Symanzik and G. Mensah and G. Gibbons and A. Diez-Roux},
- booktitle = {Journal of the American Heart Association : Cardiovascular and Cerebrovascular Disease},
- journal = {Journal of the American Heart Association: Cardiovascular and Cerebrovascular Disease},
- title = {Geographic Variations in Cardiovascular Health in the United States: Contributions of State- and Individual-Level Factors},
- volume = {4},
- year = {2015}
-}
-
-
-@Article{Hamine2015ImpactOM,
- author = {Saee Hamine and E. Gerth-Guyette and D. Faulx and B. Green and A. Ginsburg},
- booktitle = {Journal of Medical Internet Research},
- journal = {Journal of Medical Internet Research},
- title = {Impact of mHealth Chronic Disease Management on Treatment Adherence and Patient Outcomes: A Systematic Review},
- volume = {17},
- year = {2015}
-}
-
-
-@Article{Santhanakrishnan2014FactorsAC,
- author = {Iswarya Santhanakrishnan and S. Lakshminarayanan and S. Kar},
- booktitle = {Journal of Natural Science Biology and Medicine},
- journal = {Journal of Natural Science, Biology, and Medicine},
- pages = {365 - 368},
- title = {Factors affecting compliance to management of diabetes in Urban Health Center of a tertiary care teaching hospital of south India},
- volume = {5},
- year = {2014}
-}
-
-
-@Article{Fang2012StatusOC,
- author = {Jing Fang and Quanhe Yang and Yuling Hong and Fleetwood Loustalot},
- booktitle = {Journal of the American Heart Association : Cardiovascular and Cerebrovascular Disease},
- journal = {Journal of the American Heart Association: Cardiovascular and Cerebrovascular Disease},
- title = {Status of Cardiovascular Health Among Adult Americans in the 50 States and the District of Columbia, 2009},
- volume = {1},
- year = {2012}
-}
-
-
-@Article{Anderson2009RisksOM,
- author = {L. Anderson and R. Pfeiffer and O. Landgren and S. Gadalla and Sonja I. Berndt and E. Engels},
- booktitle = {British Journal of Cancer},
- journal = {British Journal of Cancer},
- pages = {822 - 828},
- title = {Risks of myeloid malignancies in patients with autoimmune conditions},
- volume = {100},
- year = {2009}
-}
-
-
-@Article{Polonsky2017TheIO,
- author = {W. Polonsky and D. Hessler and K. Ruedy and R. Beck},
- booktitle = {Diabetes Care},
- journal = {Diabetes Care},
- pages = {736 - 741},
- title = {The Impact of Continuous Glucose Monitoring on Markers of Quality of Life in Adults With Type 1 Diabetes: Further Findings From the DIAMOND Randomized Clinical Trial},
- volume = {40},
- year = {2017}
-}
-
-
-@Article{Plotnikoff2006FactorsAW,
- author = {R. Plotnikoff and L. Taylor and P. Wilson and K. Courneya and R. Sigal and N. Birkett and K. Raine and L. Svenson},
- booktitle = {Medicine \& Science in Sports \& Exercise},
- journal = {Medicine and science in sports and exercise},
+@Article{Kruk2007PhysicalAI,
+ author = {J. Kruk},
+ booktitle = {Asian Pacific Journal of Cancer Prevention},
+ journal = {Asian Pacific journal of cancer prevention : APJCP},
  pages = {
-          1526-34
+          325-38
         },
- title = {Factors associated with physical activity in Canadian adults with diabetes.},
- volume = {38 8},
- year = {2006}
+ title = {Physical activity in the prevention of the most frequent chronic diseases: an analysis of the recent evidence.},
+ volume = {8 3},
+ year = {2007}
+}
+
+
+@Article{Franssen2020CanCW,
+ author = {W. Franssen and G. H. Franssen and J. Spaas and F. Solmi and B. O. Eijnde},
+ booktitle = {International Journal of Behavioral Nutrition and Physical Activity},
+ journal = {The International Journal of Behavioral Nutrition and Physical Activity},
+ title = {Can consumer wearable activity tracker-based interventions improve physical activity and cardiometabolic health in patients with chronic diseases? A systematic review and meta-analysis of randomised controlled trials},
+ volume = {17},
+ year = {2020}
+}
+
+
+@Article{Barquera2016CardiovascularDI,
+ author = {S. Barquera and Andrea Pedroza-Tobas and C. Medina},
+ booktitle = {Current Opinion in Lipidology},
+ journal = {Current Opinion in Lipidology},
+ pages = {329 - 344},
+ title = {Cardiovascular diseases in mega-countries: the challenges of the nutrition, physical activity and epidemiologic transitions, and the double burden of disease},
+ volume = {27},
+ year = {2016}
 }
